[package]
name = "node-semver"
version = "2.2.0"
authors = ["Felipe Sere <felipesere@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
description = "A node-semver compliant semver implementation in Rust."
repository = "https://github.com/felipesere/node-semver-rs"
documentation = "https://docs.rs/node-semver"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
miette = "7.2.0"
nom = "7.1.3"
thiserror = "1.0.61"
bytecount = "0.6.8"
serde = { version = "1.0.203", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
serde_derive = "1.0.203"
serde_json = "1.0.120"

[features]
default = []
serde = ["dep:serde"]
