[package]
name = "node-semver"
version = "2.1.1-alpha.0"
authors = [
  "Felipe Sere <felipesere@gmail.com>",
  "Kat Marchán <kzm@zkat.tech>",
  "tuhana <tuhana.cat+git@gmail.com>",
]
description = "A node-semver compliant semver implementation in Rust."
repository = "https://github.com/catuhana/node-semver-rs"
license = "Apache-2.0"
edition = "2024"

[dependencies]
miette = { version = "7", optional = true }
nom = "8"
thiserror = "2"
bytecount = "0.6.9"
serde = { version = "1", optional = true }

[dev-dependencies]
pretty_assertions = "1"
serde_derive = "1"
serde_json = "1"

[features]
default = []
serde = ["dep:serde"]
miette = ["dep:miette"]
